--- a/www/feedback.html
+++ b/www/feedback.html
@@ -53,7 +53,7 @@
 				<label for="name">Enter your name</label>
 				<input type="text" id="name" name="name" placeholder="Enter your name">
 
-				<label for="messages">Enter your message here</label>
+				<label for="messages">Please, enter your message here</label>
 				<textarea name="messages" id="messages"  placeholder="Enter your message here"></textarea>
 				
 				
