added the changeg index

--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
 	<a href="index.html" title="Front page" id="logo">Decepti.com</a> 
 	<span class="contact"><a href="about.html" title="! info about our website !">Info</a></span> 
 	<input type="search" class="field" placeholder="Let me help you find">
+	<a href="js.html" title="Learning JavaScript">JS</a>
 	<span class="right"><span class="contact"><a href="reg.html" title="Register here!">Register</a></span>
 	<span class="contact"><a href="auth.html" title="Enter here!">Enter</a></span>
 </span>
